# aide

./: .gitignore  Cargo.toml  README.md  install.sh
.agent/skills/git-push/: SKILL.md
.agents/skills/create-readmemd/: SKILL.md
.agents/skills/git-commit/: SKILL.md
.agents/skills/prettier/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  editor_pane.rs  main.rs  selection.rs
src/aide_editor/: main.rs
src/daemon/: main.rs
src/filebrowser/: mod.rs
src/git/: mod.rs
src/input/: mod.rs
src/protocol/: mod.rs
src/pty_backend/: mod.rs
src/sessions/: mod.rs
src/tmux/: mod.rs
src/ui/: mod.rs
